--- a/index.html
+++ b/index.html
@@ -1,64 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>ผลงานของฉัน</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>khunkish | Portfolio</title>
 </head>
+
 <body>
-<style>
-body {
-  font-family: sans-serif;
-  margin: 0;
-  padding: 0;
-}
 
-header {
-  background-color: #3b5998;
-  height: 60px;
-  padding: 15px;
-}
-
-.ผลงาน {
-  background-color: #fff;
-  padding: 20px
-
-</style>
-  <header>
-    <a href="/"><img src="https://scontent.fbkk22-6.fna.fbcdn.net/v/t39.30808-6/242310029_2893510164297656_6475766056109627152_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeFKh2RRq49lXJ2I-bgbWR-vNfi57bQfBcY1-LnttB8Fxo6Yn0fEgEH7O83jmmOCrye59mzEFueAQ6ajfMnRf77K&_nc_ohc=wmbtdbCpSCQAX8H2Hyt&_nc_zt=23&_nc_ht=scontent.fbkk22-6.fna&oh=00_AfAMLSoFPxyuMdCM-8q9FeLImbBpoFvBQUlL9RfviqkVQg&oe=65625638" alt="โลโก้"></a>
-    <h1>ผลงานของฉัน</h1>
-    <nav>
-      <ul>
-        <li><a href="ผลงาน.html">ผลงาน</a></li>
-        <li><a href="ประวัติส่วนตัว.html">ประวัติส่วนตัว</a></li>
-        <li><a href="ติดต่อ.html">ติดต่อ</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <section class="ผลงาน">
-      <h2>ผลงาน</h2>
-      <ul>
-        <li>
-          <img src="1.jpg" alt="ภาพผลงาน">
-          <p>ชื่อผลงาน: ผลงานชิ้นแรก</p>
-          <p>คำอธิบาย: ผลงานชิ้นแรกของผู้สร้าง</p>
-        </li>
-        <li>
-          <img src="2.jpg" alt="ภาพผลงาน">
-          <p>ชื่อผลงาน: ผลงานชิ้นที่สอง</p>
-          <p>คำอธิบาย: ผลงานชิ้นที่สองของผู้สร้าง</p>
-        </li>
-      </ul>
-    </section>
-  </main>
-
-  <footer>
-    <p>ติดต่อ: <a href="mailto:example@example.com">example@example.com</a></p>
-    <p><a href="https://facebook.com/example">Facebook</a></p>
-    <p><a href="https://twitter.com/example">Twitter</a></p>
-  </footer>
+    <div class="container">
+        <div class="glass-container">
+            <nav class="navbar">
+                <div class="logo"><a href="#">AsmrProg</a></div>
+                <ul class="nav-links">
+                    <li class="nav-link"><a href="#">Home</a></li>
+                    <li class="nav-link"><a href="#">Youtube</a></li>
+                    <li class="nav-link"><a href="#">About</a></li>
+                </ul>
+            </nav>
+            <div class="content">
+                <div class="main">
+                    <h2>Hey! 👋,<br>It's AsmrProg</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+                        Soluta ducimus dicta nisi quisquam rerum
+                    </p>
+                    <button>Get Started</button>
+                </div>
+                <div class="image-wrapper">
+                    <img src="image.png">
+                    <div class="attrebute">
+                        <a
+                            href="https://www.freepik.com/free-psd/marketing-concept-with-woman-rocketship_33417710.htm#page=2&query=3d%20illustration&position=32&from_view=search&track=ais">Image
+                            by Freepik</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
+
 </html>
