--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>khunkish | Portfolio</title>
+    <title>Khun Kish | Portfolio</title>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="glass-container">
             <nav class="navbar">
-                <div class="logo"><a href="#">AsmrProg</a></div>
+                <div class="logo"><a href="#">Khun Kish</a></div>
                 <ul class="nav-links">
                     <li class="nav-link"><a href="#">Home</a></li>
                     <li class="nav-link"><a href="#">Youtube</a></li>
@@ -22,7 +22,7 @@
             </nav>
             <div class="content">
                 <div class="main">
-                    <h2>Hey! 👋,<br>It's AsmrProg</h2>
+                    <h2>Hey! 👋,<br>It's Khun Kish</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
                         Soluta ducimus dicta nisi quisquam rerum
@@ -30,7 +30,7 @@
                     <button>Get Started</button>
                 </div>
                 <div class="image-wrapper">
-                    <img src="image.png">
+                    <img src="https://raw.githubusercontent.com/AsmrProg-YT/Personal-Portfolios/master/Personal%20Portfolio%20%2303/image.png">
                     <div class="attrebute">
                         <a
                             href="https://www.freepik.com/free-psd/marketing-concept-with-woman-rocketship_33417710.htm#page=2&query=3d%20illustration&position=32&from_view=search&track=ais">Image
