--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Author: Khunkish, khunkish,">
+    <meta name="google-site-verification" content="+nxGUDJ4QpAZ5l9Bsjdi102tLVC21AIh5d1Nl23908vVuFHs34=">
     <title>Khun Kish | Portfolio</title>
-</head>
-
+    <!--<meta name="robots" content="noindex,nofollow">-->
+  </head>
 <body>
-
     <div class="container">
         <div class="glass-container">
             <nav class="navbar">
                 <div class="logo"><a href="#">Khun Kish</a></div>
                 <ul class="nav-links">
-                    <li class="nav-link"><a href="#">Home</a></li>
-                    <li class="nav-link"><a href="#">Youtube</a></li>
-                    <li class="nav-link"><a href="#">About</a></li>
+                    <li class="nav-link"><a href="#">ผลงาน</a></li>
+                    <li class="nav-link"><a href="https://web.facebook.com/?_rdc=1&_rdr">Facebook</a></li>
+                    <li class="nav-link"><a href="https://www.instagram.com/">Instagram</a></li>
+                    <li class="nav-link"><a href="https://www.youtube.com/channel/UCJSvDZdcTEIhV3czixJ9VDA">Youtube</a></li>
                 </ul>
             </nav>
             <div class="content">
                 <div class="main">
-                    <h2>Hey! 👋,<br>It's Khun Kish</h2>
+                        <h2>สวัสดีครับ👋,<br>It's Khun Kish</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
                         Soluta ducimus dicta nisi quisquam rerum
                     </p>
-                    <button>Get Started</button>
+                    <button>เข้าทีมตะละลิดติสติ้ววว</button>
                 </div>
                 <div class="image-wrapper">
                     <img src="https://raw.githubusercontent.com/AsmrProg-YT/Personal-Portfolios/master/Personal%20Portfolio%20%2303/image.png">
@@ -40,7 +39,5 @@
             </div>
         </div>
     </div>
-
 </body>
-
 </html>
