--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Author: Khunkish, khunkish,">
     <meta name="google-site-verification" content="+nxGUDJ4QpAZ5l9Bsjdi102tLVC21AIh5d1Nl23908vVuFHs34=">
+    <link rel="stylesheet" href="style.css">
     <title>Khun Kish | Portfolio</title>
     <!--<meta name="robots" content="noindex,nofollow">-->
   </head>
@@ -23,8 +24,8 @@
                 <div class="main">
                         <h2>สวัสดีครับ👋,<br>It's Khun Kish</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                        Soluta ducimus dicta nisi quisquam rerum
+                        ผู้ก่อตั้ง MiMib Studios <br>
+                        เราได้สร้างสรรค์และผลิตผลงานในด้านต่างๆ ที่ร้านขายสินค้า และรับเขียนโค๊ด ออกแบบตัดต่อ ห้องอัดเพลง รับถ่ายทำ MV เพลงต่างๆ เราอยู่เบื้องหลังผลงานที่ไม่ค่อยดังซักเท่าไหร่
                     </p>
                     <button>เข้าทีมตะละลิดติสติ้ววว</button>
                 </div>
