--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav class="navbar">
                 <div class="logo"><a href="#">Khun Kish</a></div>
                 <ul class="nav-links">
-                    <li class="nav-link"><a href="#">ผลงาน</a></li>
+                    <li class="nav-link"><a href="http://45.141.27.187/">All Work</a></li>
                     <li class="nav-link"><a href="https://web.facebook.com/?_rdc=1&_rdr">Facebook</a></li>
                     <li class="nav-link"><a href="https://www.instagram.com/">Instagram</a></li>
                     <li class="nav-link"><a href="https://www.youtube.com/channel/UCJSvDZdcTEIhV3czixJ9VDA">Youtube</a></li>
@@ -25,7 +25,7 @@
                         <h2>สวัสดีครับ👋,<br>It's Khun Kish</h2>
                     <p>
                         ผู้ก่อตั้ง MiMib Studios <br>
-                        เราได้สร้างสรรค์และผลิตผลงานในด้านต่างๆ ที่ร้านขายสินค้า และรับเขียนโค๊ด ออกแบบตัดต่อ ห้องอัดเพลง รับถ่ายทำ MV เพลงต่างๆ เราอยู่เบื้องหลังผลงานที่ไม่ค่อยดังซักเท่าไหร่
+                        เราได้สร้างสรรค์และผลิตผลงานในด้านต่างๆ ที่ร้านขายสินค้า และรับเขียนโค๊ด ออกแบบตัดต่อ ห้องอัดเพลง รับถ่ายทำ MV เพลงต่างๆ เราอยู่เบื้องหลังผลงานที่ไม่ค่อยดังซักเท่าไหร่<br>
                     </p>
                     <button>เข้าทีมตะละลิดติสติ้ววว</button>
                 </div>
